powerPreference "high-performance" causes bad performance https://bugs.webkit.org/show_bug.cgi?id=276959 rdar://132352797

Reviewed by Dan Glastonbury.

The assumption is that at the report time, the feature
alwaysPreferStagedTextureUploads would be slower. The feature is enabled
by default in ANGLE. It is disabled by default for WebKit usage, but we
failed to disable it if high-perforance was requested. The issue was
reproed on iOS 15.5+, but does not repro on current WebKit ToT.
The changes in ANGLE or Metal likely speed up the staged texture upload.

Fix the code by moving the application of the feature overrides to
correct level in the nested ifs.

* Source/WebCore/platform/graphics/cocoa/GraphicsContextGLCocoa.mm:
(WebCore::initializeEGLDisplay):

Canonical link: https://commits.webkit.org/281856@main